UI elements working

--- a/html/learn.html
+++ b/html/learn.html
@@ -887,6 +887,15 @@
       <img src="../img/learn/readability-toggle.png" class="max-width" />
     </div>
 
+    <div class="feature-block">
+      <!-- Track Notes -->
+      <h2 id="track-notes">Track Notes</h2>
+
+      <p>Toggle this to turn track notes on or off</p>
+      <!-- supporting image(s) if needed -->
+      <!-- <img src="../img/learn/feature-image.png" class="max-width" /> -->
+    </div>
+
     <!-- Tweak Discriminators -->
     <div class="feature-block">
 
