--- a/html/learn.html
+++ b/html/learn.html
@@ -887,6 +887,15 @@
       <img src="../img/learn/readability-toggle.png" class="max-width" />
     </div>
 
+    <div class="feature-block">
+        <!-- Feature Name -->
+        <h2 id="record-visit">Record Visit</h2>
+  
+        <p>Record a visit whenever you go to a release page.</p>
+        <!-- supporting image(s) if needed -->
+        <!-- <img src="../img/learn/feature-image.png" class="max-width" /> -->
+      </div>
+
     <!-- Tweak Discriminators -->
     <div class="feature-block">
 
