Added spacing above Save button

--- a/html/options.html
+++ b/html/options.html
@@ -12,7 +12,7 @@
             <input type="text" id="port" name="port" /><br />
             <label for="user">User:</label><br />
             <input type="text" id="user" name="user" /><br />
-            <input type="submit" value="Save" />
+            <input style="margin-top: 10px;" type="submit" value="Save" />
         </form>
     </body>
     <script src="/js/options.js"></script>
