Added track/untrack functionality to discogs release page

--- a/html/learn.html
+++ b/html/learn.html
@@ -864,6 +864,15 @@
       <img src="../img/learn/readability-toggle.png" class="max-width" />
     </div>
 
+    <div class="feature-block">
+      <!-- Feature Name -->
+      <h2 id="track-release">Track</h2>
+
+      <p>Shows a button on the release page which allows you to start tracking when it comes up for sale.</p>
+      <!-- supporting image(s) if needed -->
+      <!-- <img src="../img/learn/feature-image.png" class="max-width" /> -->
+    </div>
+
     <!-- Tweak Discriminators -->
     <div class="feature-block">
 
