Added track legacy button to send message to telegram bot

--- a/html/options.html
+++ b/html/options.html
@@ -8,6 +8,10 @@
         <form id="settings">
             <label for="username">Username:</label><br />
             <input type="text" id="username" name="username" /><br />
+            <label for="chatId">Chat ID:</label><br />
+            <input type="text" id="chatId" name="chatId" /><br />
+            <label for="telegramBotToken">Telegram Bot Token:</label><br />
+            <input type="text" id="telegramBotToken" name="telegramBotToken" /><br />
             <input style="margin-top: 10px;" type="submit" value="Save" />
         </form>
     </body>
